--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,6 @@
-absl-py==2.3.1
-astunparse==1.6.3
-certifi==2026.1.4
-charset-normalizer==3.4.4
-contourpy==1.3.2
-cycler==0.12.1
-flatbuffers==25.12.19
-fonttools==4.61.1
-gast==0.4.0
-google-auth==2.47.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.74.0
-h5py==3.15.1
-idna==3.11
-keras==3.12.0
-kiwisolver==1.4.9
-libclang==18.1.1
-Markdown==3.10
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-matplotlib==3.10.8
-mdurl==0.1.2
-ml-dtypes==0.3.2
-namex==0.1.0
-numpy==1.24.3
-oauthlib==3.3.1
-opt_einsum==3.4.0
-optree==0.18.0
-packaging==25.0
-pandas==2.3.3
-pillow==12.1.0
-protobuf==4.25.8
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-Pygments==2.19.2
-pyparsing==3.3.1
-python-dateutil==2.9.0.post0
-pytz==2025.2
-requests==2.32.5
-requests-oauthlib==2.0.0
-rich==14.2.0
-rsa==4.9.1
-six==1.17.0
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-tensorflow==2.16.2
-tensorflow-estimator==2.13.0
-tensorflow-io-gcs-filesystem==0.37.1
-tensorflow-macos==2.16.2
-tensorflow-metal==1.2.0
-termcolor==3.3.0
-typing_extensions==4.15.0
-tzdata==2025.3
-urllib3==2.6.3
-Werkzeug==3.1.5
-wrapt==2.0.1
+numpy>=2.0.0
+pandas>=2.0.0
+matplotlib>=3.10.0
+tensorflow>=2.20.0
+jupyter>=1.0.0
+ipython>=8.0.0
